Header and footer

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,1 +1,16 @@
-<p>footer works!</p>
+<footer>
+  <div>
+    <div>
+      <img alt="Logo" ngSrc="./assets/img/danieslogo.webp" height="363" width="906">
+      <p>Web Developer</p>
+      <p>Munich Germany</p>
+    </div>
+    <h3>© Daniel Tran 2025</h3>
+    <ol>
+      <a>Github</a>
+      <a>LinkedIn</a>
+      <a>Email</a>
+      <a>Legal Notice</a>
+    </ol>
+  </div>
+</footer>
