--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,1 +1,12 @@
-<p>header works!</p>
+<header>
+  <div>
+    <nav>
+      <button id="lang-switch">EN / DE</button>
+      <a href="">About me</a>
+      <a href="">Skills</a>
+      <a href="">Projects</a>
+    </nav>
+
+    <img alt="Logo" ngSrc="./assets/img/danieslogo.webp" height="363" width="906" priority>
+  </div>
+</header>
