--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
 
-@import "./styles/default.scss";
-@import "./styles/fonts.scss";
+@import "styles/default";
+@import "styles/colors";
+@import "styles/fonts";
