Footer style non responsive

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,16 +1,20 @@
 <footer>
-  <div>
+  <div class="max-wrapper">
     <div>
-      <img alt="Logo" ngSrc="./assets/img/danieslogo.webp" height="363" width="906">
+      <img alt="Logo" ngSrc="./assets/img/danieslogo.webp" height="363" width="906" priority>
       <p>Web Developer</p>
-      <p>Munich Germany</p>
+      <address>Munich Germany</address>
     </div>
-    <h3>© Daniel Tran 2025</h3>
-    <ol>
-      <a>Github</a>
-      <a>LinkedIn</a>
-      <a>Email</a>
-      <a>Legal Notice</a>
-    </ol>
+
+    <p>© Daniel Tran 2025</p>
+
+    <nav aria-label="Footer navigation">
+      <ul>
+        <li class="test"><a target="_blank" rel="noopener" href="https://github.com/uteki">Github</a></li>
+        <li><a target="_blank" rel="noopener">LinkedIn</a></li>
+        <li><a href="mailto:danietr99@gmail.com">Email</a></li>
+        <li><a>Legal Notice</a></li>
+      </ul>
+    </nav>
   </div>
 </footer>
