--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,17 @@
 @import "styles/default";
 @import "styles/colors";
 @import "styles/fonts";
+
+.max-wrapper {
+  max-width: 1440px;
+  padding: 0 24px;
+  margin: 0 auto;
+
+  @media (min-width: 768px) {
+    padding: 0 48px;
+  }
+
+  @media (min-width: 1200px) {
+    padding: 0 96px;
+  }
+}
