--- a/src/app/landing-page/above-the-fold/above-the-fold.component.html
+++ b/src/app/landing-page/above-the-fold/above-the-fold.component.html
@@ -1,3 +1,25 @@
 <section>
+  <div class="max-wrapper">
+    <h2>Frontend Developer</h2>
+    <h1>Daniel Tran</h1>
 
+    <div>
+      <a
+        (mouseenter)="onHover($event)"
+        (mouseleave)="onHoverOut($event)"
+        (touchstart)="onHover($event)"
+        (touchend)="onHoverOut($event)"
+      href="#">
+        <span>Check my work</span>
+      </a>
+      <a
+        (mouseenter)="onHover($event)"
+        (mouseleave)="onHoverOut($event)"
+        (touchstart)="onHover($event)"
+        (touchend)="onHoverOut($event)"
+      href="#">
+        <span>Contact me</span>
+      </a>
+    </div>
+  </div>
 </section>
