Above the fold style

--- a/src/app/landing-page/above-the-fold/above-the-fold.component.html
+++ b/src/app/landing-page/above-the-fold/above-the-fold.component.html
@@ -22,4 +22,18 @@
       </a>
     </div>
   </div>
+
+  <div class="lateral max-wrapper">
+    <aside class="left">
+      <div><img ngSrc="assets/img/icons/arrow.svg" alt="arrow" height="14" width="8"></div>
+    </aside>
+
+    <aside class="right">
+      <div>
+        <a href="mailto:danietr99@gmail.com">danietr99&#64;gmail.com</a>
+        <a target="_blank" rel="noopener" href="https://github.com/uteki"><img ngSrc="assets/img/icons/Github.svg" alt="Github" height="32" width="32"></a>
+        <a target="_blank" rel="noopener" href="#"><img ngSrc="assets/img/icons/Linkedin.svg" alt="Linkedin" height="32" width="32"></a>
+      </div>
+    </aside>
+  </div>
 </section>
