--- a/src/styles/_motion.scss
+++ b/src/styles/_motion.scss
@@ -12,3 +12,12 @@
   0%   { left: -100%; }
   100% { left: 0; }
 }
+
+@keyframes arrowJiggle {
+  from { transform: translateY(0); }
+  to { transform: translateY(5px); }
+}
+
+@keyframes scrollLeft {
+  to { left: -100%; }
+}
