--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -14,7 +14,7 @@
   src: url('../assets/fonts/karla-v32-latin-regular.woff2') format('woff2');
 }
 
-p, address, li, h1, h3, span, a {
+p, figcaption, address, li, h1, h3, span, a {
   font-family: 'Karla', sans-serif;
 }
 
