--- a/src/app/landing-page/about-me/about-me.component.html
+++ b/src/app/landing-page/about-me/about-me.component.html
@@ -3,6 +3,10 @@
     <div>
         <figure>
           <img ngSrc="assets/img/photos/danie.jpg" alt="Daniel Tran" height="1600" width="1600" priority>
+
+          <figcaption class="d-none">
+            Outside of development, I’m a passionate breakdancer. The discipline, creativity, and drive to constantly refine my skills in dance inspire how I approach coding and problem-solving in my projects.
+          </figcaption>
         </figure>
 
         <div>
@@ -12,11 +16,9 @@
 
             <p>Hi, I’m Daniel! I’ve been working in web development for over three and a half years, starting with my apprenticeship. I’m passionate about combining the logic of computer science with the creativity of design, building websites and applications that are not only functional but also visually engaging.</p>
 
-            <p class="highlight">I’m based in Munich, but I thrive in flexible environments. Remote work fits me perfectly, and I’m open to relocating for the right opportunity.</p>
-            <p class="highlight">I approach new technologies, tools, and frameworks with curiosity and enthusiasm. For me, learning isn’t just about keeping up — it’s a chance to innovate, bring fresh ideas to my work, and continually push the boundaries of what I can create.</p>
-            <p class="highlight">I tackle challenges with a mix of analytical thinking, creativity, and persistence. I love experimenting to find elegant, efficient solutions that have a meaningful impact. Coding for me is more than getting things done — it’s about crafting solutions that last.</p>
-
-            <p>Outside of development, I’m a passionate breakdancer. The discipline, creativity, and drive to constantly refine my skills in dance inspire how I approach coding and problem-solving in my projects.</p>
+            <p class="highlight"><span><img src="assets/img/icons/location_on.svg"></span>I’m based in Munich, but I thrive in flexible environments. Remote work fits me perfectly, and I’m open to relocating for the right opportunity.</p>
+            <p class="highlight"><span><img src="assets/img/icons/new_releases.svg"></span>I approach new technologies, tools, and frameworks with curiosity and enthusiasm. For me, learning isn’t just about keeping up it’s a chance to innovate, bring fresh ideas to my work, and continually push the boundaries of what I can create.</p>
+            <p class="highlight"><span><img src="assets/img/icons/cognition.svg"></span>I tackle challenges with a mix of analytical thinking, creativity, and persistence. I love experimenting to find elegant, efficient solutions that have a meaningful impact. Coding for me is more than getting things done it’s about crafting solutions that last.</p>
           </div>
         </div>
     </div>
