--- a/src/app/landing-page/above-the-fold/above-the-fold.component.scss
+++ b/src/app/landing-page/above-the-fold/above-the-fold.component.scss
@@ -1,4 +1,5 @@
 @use "../../../styles/colors" as *;
+@use "../../../styles/mixins" as *;
 
 $items: 8;
 $duration: 30s;
@@ -38,33 +39,7 @@ section {
       justify-content: center;
 
       > a {
-        display: flex;
-        overflow: hidden;
-        align-items: center;
-        justify-content: center;
-        border: 1px solid #FFFFFF;
-        border-radius: 100px;
-        line-height: 120%;
-        font-weight: 400;
-        font-size: 18px;
-        height: 48px;
-        width: 172px;
-        opacity: 1;
-
-        > span {
-          transition: transform 0.4s ease;
-          position: relative;
-        }
-
-        &:hover {
-          transition: all 1s ease-out;
-          border: 1px solid $green-hundred;
-
-          > span {
-            transition: all 1s ease-out;
-            color: $green-hundred;
-          }
-        }
+        @include pill-button;
       }
     }
   }
