--- a/src/app/landing-page/skill-set/skill-set.component.html
+++ b/src/app/landing-page/skill-set/skill-set.component.html
@@ -1,5 +1,169 @@
 <section>
   <div class="max-wrapper">
+    <div>
+      <article>
+        <div>
+          <h3>Technologies</h3>
 
+          <div>
+            <h2>Skill Set</h2>
+            <p>I’ve worked with a wide range of front-end and back-end technologies, including Angular, TypeScript, Firebase, Docker, Java, PHP, and SQL. I adapt quickly to new technologies, continuously refine my skills and workflow, and treat every project as an opportunity to learn, grow, and stay ahead in the fast-moving world of web development, delivering efficient, scalable, and engaging solutions.</p>
+
+            <div>
+              <h4>You need <span>another skill?</span></h4>
+              <p>Feel free to contact me. I look forward to expanding on my previous knowledge.</p>
+            </div>
+
+            <a
+              (mouseenter)="onHover($event)"
+              (mouseleave)="onHoverOut($event)"
+              (touchstart)="onHover($event)"
+              (touchend)="onHoverOut($event)"
+              href="#">
+              <span>Let's Talk</span>
+            </a>
+          </div>
+        </div>
+      </article>
+
+      <div>
+        <div>
+          <figure>
+            <img src="assets/img/icons/skills/html.svg" alt="HTML">
+            <figcaption>HTML</figcaption>
+          </figure>
+        </div>
+        <div>
+          <figure>
+            <img src="assets/img/icons/skills/css.svg" alt="CSS">
+            <figcaption>CSS</figcaption>
+          </figure>
+        </div>
+        <div>
+          <figure>
+            <img src="assets/img/icons/skills/javascript.svg" alt="JavaScript">
+            <figcaption>JavaScript</figcaption>
+          </figure>
+        </div>
+        <div>
+          <figure>
+            <img src="assets/img/icons/skills/md.svg" alt="Material Design">
+            <figcaption>Material <br>Design</figcaption>
+          </figure>
+        </div>
+        <div>
+          <figure>
+            <img src="assets/img/icons/skills/typescript.svg" alt="TypeScript">
+            <figcaption>TypeScript</figcaption>
+          </figure>
+        </div>
+        <div>
+          <figure>
+            <img src="assets/img/icons/skills/angular.svg" alt="Angular">
+            <figcaption>Angular</figcaption>
+          </figure>
+        </div>
+        <div>
+          <figure>
+            <img src="assets/img/icons/skills/firebase.svg" alt="Firebase">
+            <figcaption>Firebase</figcaption>
+          </figure>
+        </div>
+        <div>
+          <figure>
+            <img src="assets/img/icons/skills/git.svg" alt="Git">
+            <figcaption>Git</figcaption>
+          </figure>
+        </div>
+        <div>
+          <figure>
+            <img src="assets/img/icons/skills/api.svg" alt="REST-API">
+            <figcaption>REST-API</figcaption>
+          </figure>
+        </div>
+        <div>
+          <figure>
+            <img src="assets/img/icons/skills/scrum.svg" alt="Scrum">
+            <figcaption>Scrum</figcaption>
+          </figure>
+        </div>
+        <div>
+          <figure>
+            <img src="assets/img/icons/skills/bootstrap.svg" alt="Bootstrap">
+            <figcaption>Bootstrap</figcaption>
+          </figure>
+        </div>
+        <div>
+          <figure>
+            <img src="assets/img/icons/skills/java.svg" alt="JAVA">
+            <figcaption>JAVA</figcaption>
+          </figure>
+        </div>
+        <div>
+          <figure>
+            <img src="assets/img/icons/skills/php.svg" alt="PHP">
+            <figcaption>PHP</figcaption>
+          </figure>
+        </div>
+        <div>
+          <figure>
+            <img src="assets/img/icons/skills/twig.svg" alt="Twig">
+            <figcaption>Twig</figcaption>
+          </figure>
+        </div>
+        <div>
+          <figure>
+            <img src="assets/img/icons/skills/sql.svg" alt="SQL">
+            <figcaption>SQL</figcaption>
+          </figure>
+        </div>
+        <div>
+          <figure>
+            <img src="assets/img/icons/skills/docker.svg" alt="Docker">
+            <figcaption>Docker</figcaption>
+          </figure>
+        </div>
+        <div>
+          <figure>
+            <img src="assets/img/icons/skills/drupal.svg" alt="Drupal">
+            <figcaption>Drupal</figcaption>
+          </figure>
+        </div>
+        <div>
+          <figure>
+            <img src="assets/img/icons/skills/wordpress.svg" alt="Wordpress">
+            <figcaption>Wordpress</figcaption>
+          </figure>
+        </div>
+        <div>
+          <figure class="tooltip">
+            <img src="assets/img/icons/skills/growth.svg" alt="Growth Icon">
+            <figcaption>Growth <br>mindset</figcaption>
+
+            <div class="tooltip-content">
+              <p>I have a special interest in learning</p>
+              <div>
+                <figure>
+                  <img src="assets/img/icons/skills/react.svg" alt="React" width="30">
+                  <figcaption>React</figcaption>
+                </figure>
+                <figure>
+                  <img src="assets/img/icons/skills/vue.svg" alt="Vue" width="30">
+                  <figcaption>Vue</figcaption>
+                </figure>
+                <figure>
+                  <img src="assets/img/icons/skills/python.svg" alt="Python" width="30">
+                  <figcaption>Python</figcaption>
+                </figure>
+              </div>
+            </div>
+          </figure>
+        </div>
+        <div>
+          <figure>
+          </figure>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
