--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
 
 @import "styles/default";
 @import "styles/motion";
+@import "styles/mixins";
 @import "styles/colors";
 @import "styles/fonts";
 
