--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -18,6 +18,6 @@ p, figcaption, address, li, h1, h3, span, a {
   font-family: 'Karla', sans-serif;
 }
 
-h2 {
+h2, h4 {
   font-family: "Fira Code", monospace;
 }
